# gpu-test-farm-provisioner

./: .gitignore  Makefile  README.md  requirements.txt  setup.sh
ansible/: ansible.cfg
ansible/inventory/: hosts.yml  hosts_ssh.yml
ansible/playbooks/: collect_results.yml  deploy_tests.yml  setup_node.yml
ansible/roles/cuda_stub/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/test_runner/tasks/: main.yml
docker/: Dockerfile.cuda-test  Dockerfile.node  test_matrix.json  test_runner.py
docker/tests/autoconf_checker/: configure.ac
docker/tests/autoconf_checker/src/: Makefile.am  cuda_version_checker.c
docker/tests/cmake_validator/: CMakeLists.txt  cuda_math_validator.c
docker/tests/meson_stress/: cuda_stress_runner.c  meson.build
scripts/: generate_report.py  orchestrate.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/kvm/: main.tf
